--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <title>Dom Selection</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <style>
-      * {
-        border: 2px solid #dedede;
-        padding: 15px;
-        margin: 15px;
-      }
-
-      html {
-        margin: 0;
-        padding: 0;
-      }
-
       body {
-        max-width: 600px;
-        margin: 30px auto;
-        font-family: sans-serif;
-        color: #333;
+        text-align: center;
+      }
+      .biru-muda {
+        background-color: lightblue;
+      }
+      .kotak {
+        width: 25px;
+        height: 25px;
+        margin: 10px auto;
+      }
+      .merah {
+        background-color: red;
+      }
+      .hijau {
+        background-color: green;
+      }
+      .biru {
+        background-color: blue;
+      }
+      html,
+      body {
+        height: 100%;
       }
     </style>
   </head>
-
   <body>
-    <h1 id="judul">Hello World</h1>
-    <div id="container">
-      <section id="a">
-        <p class="p1">paragraf 1</p>
-        <a href="http://instagram.com/sandhikagalih"
-          >Instagram Sandhika Galih</a
-        >
-        <p class="p2">paragraf 2</p>
-        <p class="p3">paragraf 3</p>
-      </section>
-      <section id="b">
-        <p>paragraf 4</p>
-        <ul>
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
-        </ul>
-      </section>
-    </div>
+    <h1>Bermain Dengan Warna</h1>
+    <button type="button" id="tUbahWarna">
+      Ubah Warna
+    </button>
 
-    <script src="script.js"></script>
+    <br />
+    <div class="kotak merah"></div>
+    <input type="range" name="sMerah" min="0" max="255 " />
+
+    <div class="kotak hijau"></div>
+    <input type="range" name="sHijau" min="0" max="255" />
+
+    <div class="kotak biru"></div>
+    <input type="range" name="sBiru" min="0" max="255" />
   </body>
+  <script src="script.js"></script>
 </html>
